[gd_scene load_steps=14 format=3 uid="uid://6o6eiydhbvdn"]

[ext_resource type="Material" uid="uid://bqobf4jtv2a83" path="res://shaders/RedShader.tres" id="1_03yoi"]
[ext_resource type="Script" uid="uid://8ij4vk5yqwtt" path="res://scripts/player.gd" id="2_vgh7x"]
[ext_resource type="Texture2D" uid="uid://bctge3j1cttg3" path="res://assets/ship.png" id="3_dhg42"]
[ext_resource type="Script" uid="uid://c78lqfuowj4ou" path="res://scripts/states/State_machine.gd" id="4_y8w6n"]
[ext_resource type="Script" uid="uid://dbfkhxnw14hba" path="res://scripts/states/PlayerIdle.gd" id="5_q05er"]
[ext_resource type="Script" uid="uid://dtsmo3xvihwhe" path="res://scripts/states/PlayerWandering.gd" id="6_0jxdt"]
[ext_resource type="Texture2D" uid="uid://666hhlenjqfm" path="res://assets/flames1.png" id="7_0jxdt"]
[ext_resource type="Texture2D" uid="uid://d0c3i380oberb" path="res://assets/flames2.png" id="8_omqnq"]
[ext_resource type="Texture2D" uid="uid://bj7quaj4iga24" path="res://assets/force_field_2.png" id="9_omqnq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wq5sj"]
animations = [{
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_0jxdt")
}, {
"duration": 1.0,
"texture": ExtResource("8_omqnq")
}],
"loop": true,
"name": &"wandering",
"speed": 5.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_0jxdt"]
properties/0/path = NodePath(".:synced_position")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0jxdt"]
radius = 28.0
height = 124.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wq5sj"]
radius = 146.055

[node name="PlayerShip" type="CharacterBody2D"]
material = ExtResource("1_03yoi")
scale = Vector2(0.5, 0.5)
script = ExtResource("2_vgh7x")

[node name="Sprite2D" type="Sprite2D" parent="."]
use_parent_material = true
rotation = -1.5708
texture = ExtResource("3_dhg42")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_y8w6n")
initial_state = "PlayerIdle"

[node name="PlayerIdle" type="Node" parent="StateMachine"]
script = ExtResource("5_q05er")
metadata/_custom_type_script = "uid://dbfkhxnw14hba"

[node name="PlayerWandering" type="Node" parent="StateMachine"]
script = ExtResource("6_0jxdt")
metadata/_custom_type_script = "uid://dtsmo3xvihwhe"

[node name="Animation_Flames" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 86)
scale = Vector2(1.88574, 1.88574)
sprite_frames = SubResource("SpriteFrames_wq5sj")
animation = &"idle"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_0jxdt")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-4, 0)
shape = SubResource("CapsuleShape2D_0jxdt")

[node name="ForceFieldArea" type="Area2D" parent="." groups=["safeZone"]]
visible = false
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ForceFieldArea"]
shape = SubResource("CircleShape2D_wq5sj")

[node name="Sprite2D" type="Sprite2D" parent="ForceFieldArea"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_omqnq")

[node name="ForceFieldTimer" type="Timer" parent="ForceFieldArea"]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="DetectionArea" to="." method="_on_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_area_exited"]
[connection signal="area_shape_entered" from="DetectionArea" to="." method="_on_detection_area_area_shape_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_shape_entered" from="DetectionArea" to="." method="_on_detection_area_body_shape_entered"]
[connection signal="timeout" from="ForceFieldArea/ForceFieldTimer" to="." method="_on_force_field_timer_timeout"]
